Update number of iterations

--- a/main.ipynb
+++ b/main.ipynb
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-DLobWUYmtBM",
-        "outputId": "84d6cacd-bf6c-4cf5-c086-974201578364"
+        "outputId": "8b1430f4-8d29-4663-fb4c-6adf9427d4b2"
       },
       "source": [
         "!git clone https://github.com/roshan-d21/Capstone-Project.git"
@@ -46,12 +46,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'Capstone-Project'...\n",
-            "remote: Enumerating objects: 227, done.\u001b[K\n",
-            "remote: Counting objects: 100% (39/39), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (30/30), done.\u001b[K\n",
-            "remote: Total 227 (delta 13), reused 31 (delta 9), pack-reused 188\u001b[K\n",
-            "Receiving objects: 100% (227/227), 229.12 MiB | 31.66 MiB/s, done.\n",
-            "Resolving deltas: 100% (76/76), done.\n",
+            "remote: Enumerating objects: 256, done.\u001b[K\n",
+            "remote: Counting objects: 100% (68/68), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (51/51), done.\u001b[K\n",
+            "remote: Total 256 (delta 32), reused 47 (delta 17), pack-reused 188\u001b[K\n",
+            "Receiving objects: 100% (256/256), 229.14 MiB | 27.85 MiB/s, done.\n",
+            "Resolving deltas: 100% (95/95), done.\n",
             "Checking out files: 100% (148/148), done.\n"
           ]
         }
@@ -61,32 +61,21 @@
       "cell_type": "code",
       "metadata": {
         "id": "kIXDBdD2cr-I",
-        "outputId": "f0581bcc-99c5-4aaa-8ac1-75bdae664e7a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6b3115d9-b8ec-4b1f-fcb6-be304cbee992"
       },
       "source": [
         "!cd Capstone-Project && git pull"
       ],
-      "execution_count": 16,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "remote: Enumerating objects: 11, done.\u001b[K\n",
-            "remote: Counting objects:   9% (1/11)\u001b[K\rremote: Counting objects:  18% (2/11)\u001b[K\rremote: Counting objects:  27% (3/11)\u001b[K\rremote: Counting objects:  36% (4/11)\u001b[K\rremote: Counting objects:  45% (5/11)\u001b[K\rremote: Counting objects:  54% (6/11)\u001b[K\rremote: Counting objects:  63% (7/11)\u001b[K\rremote: Counting objects:  72% (8/11)\u001b[K\rremote: Counting objects:  81% (9/11)\u001b[K\rremote: Counting objects:  90% (10/11)\u001b[K\rremote: Counting objects: 100% (11/11)\u001b[K\rremote: Counting objects: 100% (11/11), done.\u001b[K\n",
-            "remote: Compressing objects:  50% (1/2)\u001b[K\rremote: Compressing objects: 100% (2/2)\u001b[K\rremote: Compressing objects: 100% (2/2), done.\u001b[K\n",
-            "remote: Total 6 (delta 4), reused 6 (delta 4), pack-reused 0\u001b[K\n",
-            "Unpacking objects:  16% (1/6)   \rUnpacking objects:  33% (2/6)   \rUnpacking objects:  50% (3/6)   \rUnpacking objects:  66% (4/6)   \rUnpacking objects:  83% (5/6)   \rUnpacking objects: 100% (6/6)   \rUnpacking objects: 100% (6/6), done.\n",
-            "From https://github.com/roshan-d21/Capstone-Project\n",
-            "   652b71e..c17ac29  master     -> origin/master\n",
-            "Updating 652b71e..c17ac29\n",
-            "Fast-forward\n",
-            " src/model/Encoder.py | 2 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
-            " src/train.py         | 4 \u001b[32m+\u001b[m\u001b[31m---\u001b[m\n",
-            " 2 files changed, 2 insertions(+), 4 deletions(-)\n"
+            "Already up to date.\n"
           ]
         }
       ]
@@ -95,10 +84,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Jd0VsCdMbAOi",
-        "outputId": "cc92a2d6-bc09-4dac-84c3-c01d7de52bed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cc92a2d6-bc09-4dac-84c3-c01d7de52bed"
       },
       "source": [
         "!cd ./Capstone-Project/src && python train.py \\\n",
@@ -125,10 +114,10 @@
         "  --g_steps 1 \\\n",
         "  --d_learning_rate 1e-3 \\\n",
         "  --d_steps 2 \\\n",
-        "  --checkpoint_every 10 \\\n",
+        "  --checkpoint_every 100 \\\n",
         "  --print_every 50 \\\n",
-        "  --num_iterations 20000 \\\n",
-        "  --num_epochs 500 \\\n",
+        "  --num_iterations 10000 \\\n",
+        "  --num_epochs 200 \\\n",
         "  --pooling_type 'pool_net' \\\n",
         "  --clipping_threshold_g 1.5 \\\n",
         "  --best_k 10 \\\n",
@@ -136,7 +125,7 @@
         "  --checkpoint_name gan_test \\\n",
         "  --restore_from_checkpoint 0"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
