--- a/main.ipynb
+++ b/main.ipynb
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-DLobWUYmtBM",
-        "outputId": "8b1430f4-8d29-4663-fb4c-6adf9427d4b2"
+        "outputId": "ac030399-d452-4a53-e20d-d5fb525622ea"
       },
       "source": [
         "!git clone https://github.com/roshan-d21/Capstone-Project.git"
@@ -46,13 +46,13 @@
           "name": "stdout",
           "text": [
             "Cloning into 'Capstone-Project'...\n",
-            "remote: Enumerating objects: 256, done.\u001b[K\n",
-            "remote: Counting objects: 100% (68/68), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (51/51), done.\u001b[K\n",
-            "remote: Total 256 (delta 32), reused 47 (delta 17), pack-reused 188\u001b[K\n",
-            "Receiving objects: 100% (256/256), 229.14 MiB | 27.85 MiB/s, done.\n",
-            "Resolving deltas: 100% (95/95), done.\n",
-            "Checking out files: 100% (148/148), done.\n"
+            "remote: Enumerating objects: 295, done.\u001b[K\n",
+            "remote: Counting objects: 100% (107/107), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (77/77), done.\u001b[K\n",
+            "remote: Total 295 (delta 59), reused 71 (delta 30), pack-reused 188\u001b[K\n",
+            "Receiving objects: 100% (295/295), 230.80 MiB | 31.66 MiB/s, done.\n",
+            "Resolving deltas: 100% (122/122), done.\n",
+            "Checking out files: 100% (152/152), done.\n"
           ]
         }
       ]
@@ -64,7 +64,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6b3115d9-b8ec-4b1f-fcb6-be304cbee992"
+        "outputId": "9bfeb057-245c-48d6-e2a4-a4dcc43a4755"
       },
       "source": [
         "!cd Capstone-Project && git pull"
@@ -125,7 +125,7 @@
         "  --checkpoint_name gan_test \\\n",
         "  --restore_from_checkpoint 0"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3538,6 +3538,65 @@
             "[INFO: train.py:  372]: Done.\n",
             "[INFO: train.py:  377]: Saving checkpoint to /content/Capstone-Project/src/gan_test_no_model.pt\n",
             "[INFO: train.py:  391]: Done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install attrdict"
+      ],
+      "metadata": {
+        "id": "QGFULuZE8Kro",
+        "outputId": "85b63db2-df6c-4626-a214-7ece4988d834",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting attrdict\n",
+            "  Downloading attrdict-2.0.1-py2.py3-none-any.whl (9.9 kB)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from attrdict) (1.15.0)\n",
+            "Installing collected packages: attrdict\n",
+            "Successfully installed attrdict-2.0.1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cd ./Capstone-Project/src && python test.py --model_path ../trained_models"
+      ],
+      "metadata": {
+        "id": "177Oj8cO7HNK",
+        "outputId": "c3cde771-8d88-4ae7-d29e-9fc40fef354f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Testing models: ['../trained_models/gan_v1.pt', '../trained_models/gan_v2.pt', '../trained_models/gan_v3.pt'] \n",
+            "\n",
+            "/usr/local/lib/python3.7/dist-packages/torch/utils/data/dataloader.py:481: UserWarning: This DataLoader will create 4 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
+            "  cpuset_checked))\n",
+            "\n",
+            "Model v1  =>  Dataset: zara1, Pred Len: 8, ADE: 0.28, FDE: 0.48\n",
+            "\n",
+            "Model v2  =>  Dataset: zara1, Pred Len: 8, ADE: 0.23, FDE: 0.47\n",
+            "\n",
+            "Model v3  =>  Dataset: zara1, Pred Len: 8, ADE: 0.21, FDE: 0.42\n"
           ]
         }
       ]
